--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <script src="index.js" charset="UTF-8"></script>
 </body>
 <footer>
-  Made with ❤️ in London.
+  Made with ❤️ in India.
 </footer>
 
 </html>
